jump-to position fixes.

--- a/css/languagestyle.css
+++ b/css/languagestyle.css
@@ -237,7 +237,7 @@
 
 #jump-to-idauhl {
     position: absolute;
-    margin-top: -12em;
+    margin-top: -8em;
 }
 
 
