--- a/css/planetstyle.css
+++ b/css/planetstyle.css
@@ -387,11 +387,6 @@
     /* top of the page */
 }
 
-#jump-to-vegetation {
-    position: absolute;
-    margin-top: -6em;
-}
-
 
 
 
